Fix: dropdown overflow on the right side removed

--- a/src/components/StorePage/FilterComponent/FilterComponent.css
+++ b/src/components/StorePage/FilterComponent/FilterComponent.css
@@ -298,7 +298,7 @@
 }
 
 .rl-dropdown-sort-options-list {
-    max-height: 250px;
+    max-height: 320px;
     overflow-y: auto;
     padding-right: 10px;
     width: 350px;
